개인별 정산내역 추가

--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                                 <th>항목명</th>
                                 <th>금액</th>
                                 <th>결제회원</th>
-                                <th>메모</th>
-                                <th>적용회원</th>
                                 <th>분배금액</th>
+                                <th>적용회원</th>
                                 <th>작업</th>
+                                <th>메모</th>
                             </tr>
                         </thead>
                         <tbody id="expense-table-body">
@@ -209,6 +209,14 @@
                         <tbody id="settlement-table-body">
                         </tbody>
                     </table>
+                </div>
+
+                <!-- 송금 내역 -->
+                <div class="transfer-container">
+                    <h4>송금 내역</h4>
+                    <div id="transfer-list">
+                        <p class="empty-message-small">정산할 내역이 없습니다.</p>
+                    </div>
                 </div>
 
                 <!-- 검증 정보 -->
