금액 입려시 콤마 자동 추가

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </div>
                         <div class="form-group">
                             <label for="expense-amount">금액</label>
-                            <input type="number" id="expense-amount" required placeholder="0" min="0">
+                            <input type="text" id="expense-amount" class="amount-input" required placeholder="0" inputmode="numeric">
                         </div>
                         <div class="form-group">
                             <label for="expense-paid-by">결제회원</label>
@@ -346,7 +346,7 @@
                         </div>
                         <div class="form-group">
                             <label for="edit-expense-amount">금액</label>
-                            <input type="number" id="edit-expense-amount" required min="0">
+                            <input type="text" id="edit-expense-amount" class="amount-input" required inputmode="numeric">
                         </div>
                         <div class="form-group">
                             <label for="edit-expense-paid-by">결제회원</label>
