UI, 카톡공유해결, .env 동적 BASE_URL

--- a/public/admin.html
+++ b/public/admin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>관리자 페이지 - Go Dutch</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/inapp-redirect.js"></script>
     <style>
         .admin-container {
             max-width: 900px;
