--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#1a2332">
     <title>Go Dutch - 회비 정산 프로그램</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/inapp-redirect.js"></script>
 </head>
 <body>
 
